kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/test_1.stderr
error: Expected at least 4 arguments, got 0.
 --> $DIR/test_1.rs:5:1
  |
5 | #[require_binary_static_env()]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
